--- a/frontend/src/app/flowchart-viewer/flowchart-viewer.component.html
+++ b/frontend/src/app/flowchart-viewer/flowchart-viewer.component.html
@@ -1,5 +1,5 @@
 <div class="row vh-100">
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;" bis_skin_checked="1">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 320px;" bis_skin_checked="1">
         <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img src="/assets/img/logo.png" width="30" height="30" alt="" class="me-2">
             <span class="fs-5">ИПР: версионирование</span>
@@ -23,12 +23,16 @@
 
         </div>
         <hr>
-        <button class="btn btn-outline-secondary mb-2" *ngIf="isEditMode" (click)="editDocument()">Добавить
+        <button class="btn btn-outline-primary mb-2" *ngIf="isEditMode" (click)="editDocument()">Добавить
             документ</button>
-        <button class="btn btn-outline-secondary mb-2" *ngIf="isEditMode" (click)="editPeriod()">Добавить
-            интервал</button>
-        <button class="btn btn-outline-secondary mb-2" (click)="save()" *ngIf="isEditMode">Сохранить</button>
-        <button class="btn btn-outline-secondary" (click)="openLoginModal()" *ngIf="!user.id">Войти для
+        <div class="btn-group" role="group">
+            <button class="btn btn-outline-primary mb-2" *ngIf="isEditMode" (click)="editPeriod()">Добавить
+                интервал</button>
+            <button class="btn btn-outline-primary mb-2" *ngIf="isEditMode" (click)="editPeriod(currentPeriod)">Изменить
+                интервал</button>
+        </div>
+        <button class="btn btn-outline-primary mb-2" (click)="save()" *ngIf="isEditMode">Сохранить</button>
+        <button class="btn btn-primary" (click)="openLoginModal()" *ngIf="!user.id">Войти для
             редактирования</button>
         <button class="btn btn-outline-primary" (click)="logout()" *ngIf="user.id">Выйти {{user.username}}</button>
     </div>
