--- a/frontend/src/app/period-modal/period-modal.component.html
+++ b/frontend/src/app/period-modal/period-modal.component.html
@@ -3,7 +3,7 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="close()"></button>
 </div>
 <div class="modal-body">
-    <form [formGroup]="periodForm" (ngSubmit)="save()" (keyup.enter)="save()">
+    <form [formGroup]="periodForm" (ngSubmit)="save()">
         <div>
             <label for="name">Название</label>
             <input type="text" formControlName="name" class="form-control" />
@@ -11,6 +11,9 @@
     </form>
 </div>
 <div class="modal-footer">
+    <button class="btn btn-danger" *ngIf="editedPeriod.id" (click)="delete()">Удалить</button>
+    <div class="flex-column me-auto">
+    </div>
     <button class="btn btn-primary" [disabled]="periodForm.invalid" (click)="save()">Сохранить</button>
     <button type="button" class="btn btn-outline-secondary" (click)="close()">Закрыть</button>
 </div>
